# coma-api

./: .eslintrc.json  .prettierignore  README.md  package.json  tailwind.config.cjs  vite.config.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  requests.rs
src-tauri/src/requests/: delete.rs  get.rs  mod.rs  post.rs  put.rs
src/lib/components/: AlertBar.svelte  ApiQuery.svelte  ApiResponse.svelte  ApiViewer.svelte  JsonInput.svelte  SettingsPage.svelte
src/lib/components/pages/: AboutPage.svelte  GeneralSettingsPage.svelte  SettingsPage.svelte
src/lib/components/settings/: NumberInput.svelte  SettingsTab.svelte  TextInput.svelte  Toggle.svelte
src/lib/modules/: deleteRequest.ts  getRequest.ts  postRequest.ts  putRequest.ts  requestTypes.ts  requests.ts  showPage.ts
src/lib/stores/: alertStore.ts  responseStatusStore.ts  responseStore.ts  settingsStore.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
